Fix for code in a post overflowing

--- a/bdfrtohtml/templates/style.css
+++ b/bdfrtohtml/templates/style.css
@@ -414,5 +414,5 @@ input[type='checkbox'] {
 }
 
 pre {
-    overflow: auto;
+    overflow: scroll;
 }
